--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   color: rgba(33, 37, 41, 1);
   font-size: 16px;
   color: rgba(33, 37, 41, 1);
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 700;
 }
 .sectionList {
@@ -20,7 +20,6 @@
 }
 
 @media screen and (min-width: 855px) {
-
   .dashboard-content {
     display: flex;
     justify-content: center;
@@ -31,9 +30,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-
   .dashboard-content {
-    justify-content:  center;
+    justify-content: center;
   }
-
 }
