--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -2,7 +2,7 @@
   border-left: 4px solid rgba(3, 184, 152, 1);
   margin: 32px 0px;
   margin-right: 10px;
-  width: 560px;
+  width: 365px;
   height: 87px;
   border-radius: 4px;
   background-color: rgba(248, 249, 250, 1);
@@ -51,4 +51,11 @@
     margin: 0px 0px;
     width: 375px;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  .cardTransation {
+    width: 520px;
+  }
+
 }
